// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/hub/Views/SideNavigationView component More Snapshot tests with react-test-renderer, but for edge cases edge case where items are empty 1`] = `
<div
  className="SideNavigation flex-container flex-dir-column"
>
  <a
    aria-current="page"
    className="SideNavigation__top active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  />
  <div
    className="SideNavigation__menu flex-child-grow flex-container flex-dir-column"
  />
  <div
    className="SideNavigation__bottom flex-container flex-dir-column"
  />
</div>
`;

exports[`app/hub/Views/SideNavigationView component Snapshot tests with react-test-renderer side navigation view is rendered correctly 1`] = `
<div
  className="SideNavigation flex-container flex-dir-column"
>
  <a
    aria-current="page"
    className="SideNavigation__top active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  />
  <div
    className="SideNavigation__menu flex-child-grow flex-container flex-dir-column"
  >
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current="page"
        className="flex-container align-middle active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="SideNavigation__menuIcon home"
        />
        <div
          className="SideNavigation__menuText"
        >
          Home
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle"
        href="/setup"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon setup"
        />
        <div
          className="SideNavigation__menuText"
        >
          Setup
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle"
        href="/tutorial"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon tutorial"
        />
        <div
          className="SideNavigation__menuText"
        >
          Tutorial
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle"
        href="/plus"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon plus"
        />
        <div
          className="SideNavigation__menuText"
        >
          Supporter
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle"
        href="/rewards"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon rewards"
        />
        <div
          className="SideNavigation__menuText"
        >
          Rewards
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle"
        href="/products"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon products"
        />
        <div
          className="SideNavigation__menuText"
        >
          Products
        </div>
      </a>
    </div>
  </div>
  <div
    className="SideNavigation__bottom flex-container flex-dir-column"
  >
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className=""
        href="/create-account"
        onClick={[Function]}
        style={undefined}
      >
        Create Account
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className=""
        href="/log-in"
        onClick={[Function]}
        style={undefined}
      >
        Log In
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <a
        className=""
        href="https://account.ghostery.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        test@example.com
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <div
        className="clickable"
        onClick={[Function]}
      >
        Log Out
      </div>
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/SideNavigationView component Snapshot tests with react-test-renderer side navigation view is rendered correctly when disabled 1`] = `
<div
  className="SideNavigation flex-container flex-dir-column"
>
  <a
    aria-current="page"
    className="SideNavigation__top disabled active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  />
  <div
    className="SideNavigation__menu flex-child-grow flex-container flex-dir-column"
  >
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current="page"
        className="flex-container align-middle disabled active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="SideNavigation__menuIcon home"
        />
        <div
          className="SideNavigation__menuText"
        >
          Home
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle disabled"
        href="/setup"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon setup"
        />
        <div
          className="SideNavigation__menuText"
        >
          Setup
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle disabled"
        href="/tutorial"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon tutorial"
        />
        <div
          className="SideNavigation__menuText"
        >
          Tutorial
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle disabled"
        href="/plus"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon plus"
        />
        <div
          className="SideNavigation__menuText"
        >
          Supporter
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle disabled"
        href="/rewards"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon rewards"
        />
        <div
          className="SideNavigation__menuText"
        >
          Rewards
        </div>
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__menuItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="flex-container align-middle disabled"
        href="/products"
        onClick={[Function]}
        style={undefined}
      >
        <div
          className="SideNavigation__menuIcon products"
        />
        <div
          className="SideNavigation__menuText"
        >
          Products
        </div>
      </a>
    </div>
  </div>
  <div
    className="SideNavigation__bottom flex-container flex-dir-column"
  >
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="disabled"
        href="/create-account"
        onClick={[Function]}
        style={undefined}
      >
        Create Account
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <a
        aria-current={null}
        className="disabled"
        href="/log-in"
        onClick={[Function]}
        style={undefined}
      >
        Log In
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <a
        className="disabled"
        href="https://account.ghostery.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        test@example.com
      </a>
    </div>
    <div
      className="SideNavigation__item SideNavigation__bottomItem flex-container align-middle"
    >
      <div
        className="clickable disabled"
        onClick={[Function]}
      >
        Log Out
      </div>
    </div>
  </div>
</div>
`;
